Bug: Fixed a bug where the Nav Bar was not Overlapping the Header. Feature: Created a new .js file called composer-char-counter

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,10 +1,12 @@
 header {
   display: flex;
-  height: 400px;
+  height: 520px;
   width: 100%;
+  z-index: 5;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   background-color: pink;
+  padding-top: 125px;
   background-image: url("https://www.transparenttextures.com/patterns/flowers.png");
 }
