--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -7,9 +7,9 @@ nav {
   padding-right: 1.5em;
   justify-content: space-between;
   align-items: center;
-  z-index: 9999;
-  position: relative;
-  
+  position: absolute;
+  z-index: 10;
+  width: 100%;
 }
 
 .logo {
