--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -6,7 +6,7 @@
   width: 100%;
 }
 
-.compose-tweet {
+.compose-tweet-title {
   font-family: 'Source Sans Pro', sans-serif;
   display: flex;
   justify-content: start;
@@ -48,10 +48,6 @@
   font-size: 20px;
 }
 
-.counter {
+.tweet-text-counter {
   font-family: 'Bungee', cursive;
-}
-
-.contain-rest {
-  display: flex;
 }
